--- a/mingw-w64-crt/lib32/msvcr100.def.in
+++ b/mingw-w64-crt/lib32/msvcr100.def.in
@@ -1839,7 +1839,7 @@ system
 tan
 ; If we implement tanh, we can set it to DATA only.
 tanh
-tmpfile
+; tmpfile replaced by emu, CRT version may not use writable temporary directory_s
 tmpfile_s
 tmpnam
 tmpnam_s
@@ -1902,6 +1902,7 @@ wprintf_s
 wscanf
 wscanf_s
 
+#define NO_TMPFILE_ALIAS
 #define WITH_NEXTAFTER_ALIAS
 #define WITH_ATOLL_ALIAS
 #define WITH_ATOLL_L_ALIAS
