--- a/mingw-w64-crt/lib32/msvcr90.def.in
+++ b/mingw-w64-crt/lib32/msvcr90.def.in
@@ -1471,7 +1471,7 @@ system
 tan
 ; If we have tanh implementation, we can set it to DATA only too.
 tanh
-tmpfile
+; tmpfile replaced by emu, CRT version may not use writable temporary directory
 tmpfile_s
 tmpnam
 tmpnam_s
@@ -1532,6 +1532,7 @@ wprintf_s
 wscanf
 wscanf_s
 
+#define NO_TMPFILE_ALIAS
 #define WITH_NEXTAFTER_ALIAS
 #define WITH_ATOLL_ALIAS
 #define WITH_ATOLL_L_ALIAS
