--- a/mingw-w64-crt/lib32/msvcrt20.def.in
+++ b/mingw-w64-crt/lib32/msvcrt20.def.in
@@ -1479,7 +1479,7 @@ system
 tan
 tanh
 time
-tmpfile
+; tmpfile replaced by emu, CRT version may not use writable temporary directory
 tmpnam
 tolower
 toupper
@@ -1579,6 +1579,7 @@ _safe_fprem1
 #define FIXED_SIZE_SYMBOLS
 #define NO_I64_FIXED_SIZE
 #define NO_FPOS64_ALIASES
+#define NO_TMPFILE_ALIAS
 #define NO_STRCMPI_ALIAS
 #define NO_DSTBIAS
 #define WITH_NEXTAFTER_ALIAS
