--- a/mingw-w64-crt/lib64/msvcr100d.def.in
+++ b/mingw-w64-crt/lib64/msvcr100d.def.in
@@ -1866,7 +1866,7 @@ tan
 tanf DATA ; overwritten
 tanh
 tanhf DATA ; overwritten
-tmpfile
+; tmpfile replaced by emu, CRT version may not use writable temporary directory
 tmpfile_s
 tmpnam
 tmpnam_s
@@ -1929,6 +1929,7 @@ wprintf_s
 wscanf
 wscanf_s
 
+#define NO_TMPFILE_ALIAS
 #define WITH_NEXTAFTER_ALIAS
 #define WITH_ATOLL_ALIAS
 #define WITH_ATOLL_L_ALIAS
