crt: Fix 32-bit x86 ntdll.dll symbol _alldiv
For I386 this symbol has stdcall calling convention, like all other _all* symbols.

Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/lib-common/ntdllcrt.def.in
+++ b/mingw-w64-crt/lib-common/ntdllcrt.def.in
@@ -18,7 +18,7 @@ F_X64(__misaligned_access)
 F_ARM32(__jump_unwind)
 __toascii
 #ifdef __i386__
-_alldiv
+_alldiv@16
 _alldvrm@16
 _allmul@16
 _alloca_probe
