crt: Fix _assert function
OS system msvcrt40.dll and msvcrt.dll libraries since Windows Vista, UCRT
library, versioned msvcr80.dll libraries and new have semi-broken _assert()
function which do not print anything to stderr in case the stderr FILE*
stream was set to translated UTF-8/UTF-16 mode (_O_U8TEXT or _O_U16TEXT or
_O_U16TEXT). This is because _assert() function is using fprintf() for
writing to stderr and it is limitation of fprintf() function that it does
not work on streams configured in one of those modes. Only fwprintf()
function can be used on FILE* stream in that mode. Add a workaround for
_assert() function. Implement a small mingw-w64 wrapper around the DLL
_assert() function and change mode to _O_TEXT before calling _assert().
Import symbol name is renamed to __msvcrt_assert and in def file is defined
with DATA keyword which prevent having function with __msvcrt_assert name.
mingw-w64 wrapper calls directly function via its import name.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -1161,6 +1161,7 @@ src_libmingwex=\
   math/powi.def.h       math/sqrt.def.h    \
   math/cephes_mconf.h   math/fp_consts.h   \
   \
+  misc/_assert.c \
   misc/mingw_longjmp.S \
   misc/mingw_getsp.S \
   misc/alarm.c \
