--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -530,7 +530,7 @@ F_I386(_adj_fptan)
 F_I386(_adjust_fdiv DATA)
 _aexit_rtn DATA
 _amsg_exit
-_assert
+__msvcrt_assert DATA == _assert ; mingw-w64 provides _assert() function as wrapper around renamed __msvcrt_assert symbol
 _atodbl
 _atoi64
 _atoldbl
