crt: Regenerate Makefile.in
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/testcases/Makefile.in
+++ b/mingw-w64-crt/testcases/Makefile.in
@@ -193,10 +193,11 @@ am__EXEEXT_2 = tstmainc$(EXEEXT) tstmaincpp$(EXEEXT) \
 	t_stprintf1_u$(EXEEXT) t_setjmp$(EXEEXT) t_sigv$(EXEEXT) \
 	t_speed_powl$(EXEEXT) t_stat$(EXEEXT) t_stat_f64$(EXEEXT) \
 	t_stat_t64$(EXEEXT) t_stat_t64_f64$(EXEEXT) t_stdint$(EXEEXT) \
-	t_time$(EXEEXT) t_tls1$(EXEEXT) t_trycatch$(EXEEXT) \
-	t_stat_slash$(EXEEXT) t_vsscanf$(EXEEXT) t_wcrtomb$(EXEEXT) \
-	t_wcsrtombs$(EXEEXT) t_wcstok_s$(EXEEXT) t_wctob$(EXEEXT) \
-	t_wreaddir$(EXEEXT) t_fseeko64$(EXEEXT) $(am__EXEEXT_1)
+	t_time$(EXEEXT) t_tls1$(EXEEXT) t_tmpfile$(EXEEXT) \
+	t_trycatch$(EXEEXT) t_stat_slash$(EXEEXT) t_vsscanf$(EXEEXT) \
+	t_wcrtomb$(EXEEXT) t_wcsrtombs$(EXEEXT) t_wcstok_s$(EXEEXT) \
+	t_wctob$(EXEEXT) t_wreaddir$(EXEEXT) t_fseeko64$(EXEEXT) \
+	$(am__EXEEXT_1)
 @LIB32_TRUE@am__EXEEXT_3 = tests32/cimag$(EXEEXT) \
 @LIB32_TRUE@	tests32/creal$(EXEEXT) tests32/cabs$(EXEEXT) \
 @LIB32_TRUE@	tests32/cacos$(EXEEXT) tests32/cacosh$(EXEEXT) \
@@ -606,6 +607,9 @@ t_tmain_OBJECTS = t_tmain-t_tmain.$(OBJEXT)
 t_tmain_LDADD = $(LDADD)
 t_tmain_LINK = $(CCLD) $(t_tmain_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) \
 	$(LDFLAGS) -o $@
+t_tmpfile_SOURCES = t_tmpfile.c
+t_tmpfile_OBJECTS = t_tmpfile.$(OBJEXT)
+t_tmpfile_LDADD = $(LDADD)
 am_t_trycatch_OBJECTS = t_trycatch.$(OBJEXT)
 t_trycatch_OBJECTS = $(am_t_trycatch_OBJECTS)
 t_trycatch_LDADD = $(LDADD)
@@ -989,12 +993,12 @@ am__depfiles_remade = ./$(DEPDIR)/t__fstat_all.Po \
 	./$(DEPDIR)/t_stprintf_u.Po ./$(DEPDIR)/t_swprintf.Po \
 	./$(DEPDIR)/t_swprintf0.Po ./$(DEPDIR)/t_swprintf1.Po \
 	./$(DEPDIR)/t_time.Po ./$(DEPDIR)/t_tls1.Po \
-	./$(DEPDIR)/t_tmain-t_tmain.Po ./$(DEPDIR)/t_trycatch.Po \
-	./$(DEPDIR)/t_vsscanf.Po ./$(DEPDIR)/t_wcrtomb.Po \
-	./$(DEPDIR)/t_wcsrtombs.Po ./$(DEPDIR)/t_wcstok_s.Po \
-	./$(DEPDIR)/t_wctob.Po ./$(DEPDIR)/t_wreaddir.Po \
-	./$(DEPDIR)/tstmain_sys_xxx.Po ./$(DEPDIR)/tstmainc.Po \
-	./$(DEPDIR)/tstmaincpp.Po \
+	./$(DEPDIR)/t_tmain-t_tmain.Po ./$(DEPDIR)/t_tmpfile.Po \
+	./$(DEPDIR)/t_trycatch.Po ./$(DEPDIR)/t_vsscanf.Po \
+	./$(DEPDIR)/t_wcrtomb.Po ./$(DEPDIR)/t_wcsrtombs.Po \
+	./$(DEPDIR)/t_wcstok_s.Po ./$(DEPDIR)/t_wctob.Po \
+	./$(DEPDIR)/t_wreaddir.Po ./$(DEPDIR)/tstmain_sys_xxx.Po \
+	./$(DEPDIR)/tstmainc.Po ./$(DEPDIR)/tstmaincpp.Po \
 	complex/$(DEPDIR)/tests32_cabs-main.Po \
 	complex/$(DEPDIR)/tests32_cacos-main.Po \
 	complex/$(DEPDIR)/tests32_cacosh-main.Po \
@@ -1219,31 +1223,31 @@ SOURCES = $(tests32_libnewcomplextests_a_SOURCES) \
 	t_stdint.c t_stprintf0_a.c t_stprintf0_u.c t_stprintf1_a.c \
 	t_stprintf1_u.c t_stprintf_a.c t_stprintf_u.c t_swprintf.c \
 	t_swprintf0.c t_swprintf1.c t_time.c t_tls1.c t_tmain.c \
-	$(t_trycatch_SOURCES) t_vsscanf.c t_wcrtomb.c t_wcsrtombs.c \
-	t_wcstok_s.c t_wctob.c t_wreaddir.c $(tests32_cabs_SOURCES) \
-	$(tests32_cacos_SOURCES) $(tests32_cacosh_SOURCES) \
-	$(tests32_carg_SOURCES) $(tests32_casin_SOURCES) \
-	$(tests32_casinh_SOURCES) $(tests32_catan_SOURCES) \
-	$(tests32_catanh_SOURCES) $(tests32_ccos_SOURCES) \
-	$(tests32_ccosh_SOURCES) $(tests32_cexp_SOURCES) \
-	$(tests32_cimag_SOURCES) $(tests32_clog_SOURCES) \
-	$(tests32_conj_SOURCES) $(tests32_cpow_SOURCES) \
-	$(tests32_cproj_SOURCES) $(tests32_creal_SOURCES) \
-	$(tests32_csin_SOURCES) $(tests32_csinh_SOURCES) \
-	$(tests32_csqrt_SOURCES) $(tests32_ctan_SOURCES) \
-	$(tests32_ctanh_SOURCES) $(tests64_cabs_SOURCES) \
-	$(tests64_cacos_SOURCES) $(tests64_cacosh_SOURCES) \
-	$(tests64_carg_SOURCES) $(tests64_casin_SOURCES) \
-	$(tests64_casinh_SOURCES) $(tests64_catan_SOURCES) \
-	$(tests64_catanh_SOURCES) $(tests64_ccos_SOURCES) \
-	$(tests64_ccosh_SOURCES) $(tests64_cexp_SOURCES) \
-	$(tests64_cimag_SOURCES) $(tests64_clog_SOURCES) \
-	$(tests64_conj_SOURCES) $(tests64_cpow_SOURCES) \
-	$(tests64_cproj_SOURCES) $(tests64_creal_SOURCES) \
-	$(tests64_csin_SOURCES) $(tests64_csinh_SOURCES) \
-	$(tests64_csqrt_SOURCES) $(tests64_ctan_SOURCES) \
-	$(tests64_ctanh_SOURCES) tstmain_sys_xxx.c tstmainc.c \
-	$(tstmaincpp_SOURCES)
+	t_tmpfile.c $(t_trycatch_SOURCES) t_vsscanf.c t_wcrtomb.c \
+	t_wcsrtombs.c t_wcstok_s.c t_wctob.c t_wreaddir.c \
+	$(tests32_cabs_SOURCES) $(tests32_cacos_SOURCES) \
+	$(tests32_cacosh_SOURCES) $(tests32_carg_SOURCES) \
+	$(tests32_casin_SOURCES) $(tests32_casinh_SOURCES) \
+	$(tests32_catan_SOURCES) $(tests32_catanh_SOURCES) \
+	$(tests32_ccos_SOURCES) $(tests32_ccosh_SOURCES) \
+	$(tests32_cexp_SOURCES) $(tests32_cimag_SOURCES) \
+	$(tests32_clog_SOURCES) $(tests32_conj_SOURCES) \
+	$(tests32_cpow_SOURCES) $(tests32_cproj_SOURCES) \
+	$(tests32_creal_SOURCES) $(tests32_csin_SOURCES) \
+	$(tests32_csinh_SOURCES) $(tests32_csqrt_SOURCES) \
+	$(tests32_ctan_SOURCES) $(tests32_ctanh_SOURCES) \
+	$(tests64_cabs_SOURCES) $(tests64_cacos_SOURCES) \
+	$(tests64_cacosh_SOURCES) $(tests64_carg_SOURCES) \
+	$(tests64_casin_SOURCES) $(tests64_casinh_SOURCES) \
+	$(tests64_catan_SOURCES) $(tests64_catanh_SOURCES) \
+	$(tests64_ccos_SOURCES) $(tests64_ccosh_SOURCES) \
+	$(tests64_cexp_SOURCES) $(tests64_cimag_SOURCES) \
+	$(tests64_clog_SOURCES) $(tests64_conj_SOURCES) \
+	$(tests64_cpow_SOURCES) $(tests64_cproj_SOURCES) \
+	$(tests64_creal_SOURCES) $(tests64_csin_SOURCES) \
+	$(tests64_csinh_SOURCES) $(tests64_csqrt_SOURCES) \
+	$(tests64_ctan_SOURCES) $(tests64_ctanh_SOURCES) \
+	tstmain_sys_xxx.c tstmainc.c $(tstmaincpp_SOURCES)
 DIST_SOURCES = $(am__tests32_libnewcomplextests_a_SOURCES_DIST) \
 	$(am__tests32_libnewcomplextestsf_a_SOURCES_DIST) \
 	$(am__tests32_libnewcomplextestsld_a_SOURCES_DIST) \
@@ -1262,8 +1266,8 @@ DIST_SOURCES = $(am__tests32_libnewcomplextests_a_SOURCES_DIST) \
 	t_stdint.c t_stprintf0_a.c t_stprintf0_u.c t_stprintf1_a.c \
 	t_stprintf1_u.c t_stprintf_a.c t_stprintf_u.c t_swprintf.c \
 	t_swprintf0.c t_swprintf1.c t_time.c t_tls1.c t_tmain.c \
-	$(t_trycatch_SOURCES) t_vsscanf.c t_wcrtomb.c t_wcsrtombs.c \
-	t_wcstok_s.c t_wctob.c t_wreaddir.c \
+	t_tmpfile.c $(t_trycatch_SOURCES) t_vsscanf.c t_wcrtomb.c \
+	t_wcsrtombs.c t_wcstok_s.c t_wctob.c t_wreaddir.c \
 	$(am__tests32_cabs_SOURCES_DIST) \
 	$(am__tests32_cacos_SOURCES_DIST) \
 	$(am__tests32_cacosh_SOURCES_DIST) \
@@ -1683,9 +1687,9 @@ testcase_progs = tstmainc tstmaincpp tstmain_sys_xxx t__fstat_all \
 	t_swprintf1 t_snwprintf t_snwprintf0 t_snwprintf1 t_stprintf_a \
 	t_stprintf_u t_stprintf0_a t_stprintf0_u t_stprintf1_a \
 	t_stprintf1_u t_setjmp t_sigv t_speed_powl t_stat t_stat_f64 \
-	t_stat_t64 t_stat_t64_f64 t_stdint t_time t_tls1 t_trycatch \
-	t_stat_slash t_vsscanf t_wcrtomb t_wcsrtombs t_wcstok_s \
-	t_wctob t_wreaddir t_fseeko64 $(am__append_1)
+	t_stat_t64 t_stat_t64_f64 t_stdint t_time t_tls1 t_tmpfile \
+	t_trycatch t_stat_slash t_vsscanf t_wcrtomb t_wcsrtombs \
+	t_wcstok_s t_wctob t_wreaddir t_fseeko64 $(am__append_1)
 EXTRA_DIST = \
   t_snprintf_tmpl.h \
   t_snwprintf_tmpl.h \
@@ -2548,6 +2552,10 @@ t_tmain$(EXEEXT): $(t_tmain_OBJECTS) $(t_tmain_DEPENDENCIES) $(EXTRA_t_tmain_DEP
 	@rm -f t_tmain$(EXEEXT)
 	$(AM_V_CCLD)$(t_tmain_LINK) $(t_tmain_OBJECTS) $(t_tmain_LDADD) $(LIBS)
 
+t_tmpfile$(EXEEXT): $(t_tmpfile_OBJECTS) $(t_tmpfile_DEPENDENCIES) $(EXTRA_t_tmpfile_DEPENDENCIES) 
+	@rm -f t_tmpfile$(EXEEXT)
+	$(AM_V_CCLD)$(LINK) $(t_tmpfile_OBJECTS) $(t_tmpfile_LDADD) $(LIBS)
+
 t_trycatch$(EXEEXT): $(t_trycatch_OBJECTS) $(t_trycatch_DEPENDENCIES) $(EXTRA_t_trycatch_DEPENDENCIES) 
 	@rm -f t_trycatch$(EXEEXT)
 	$(AM_V_CXXLD)$(t_trycatch_LINK) $(t_trycatch_OBJECTS) $(t_trycatch_LDADD) $(LIBS)
@@ -2910,6 +2918,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_time.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_tls1.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_tmain-t_tmain.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_tmpfile.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_trycatch.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_vsscanf.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_wcrtomb.Po@am__quote@ # am--include-marker
@@ -6191,6 +6200,13 @@ t_tls1.log: t_tls1$(EXEEXT)
 	--log-file $$b.log --trs-file $$b.trs \
 	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
 	"$$tst" $(AM_TESTS_FD_REDIRECT)
+t_tmpfile.log: t_tmpfile$(EXEEXT)
+	@p='t_tmpfile$(EXEEXT)'; \
+	b='t_tmpfile'; \
+	$(am__check_pre) $(LOG_DRIVER) --test-name "$$f" \
+	--log-file $$b.log --trs-file $$b.trs \
+	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
+	"$$tst" $(AM_TESTS_FD_REDIRECT)
 t_trycatch.log: t_trycatch$(EXEEXT)
 	@p='t_trycatch$(EXEEXT)'; \
 	b='t_trycatch'; \
@@ -6730,6 +6746,7 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/t_time.Po
 	-rm -f ./$(DEPDIR)/t_tls1.Po
 	-rm -f ./$(DEPDIR)/t_tmain-t_tmain.Po
+	-rm -f ./$(DEPDIR)/t_tmpfile.Po
 	-rm -f ./$(DEPDIR)/t_trycatch.Po
 	-rm -f ./$(DEPDIR)/t_vsscanf.Po
 	-rm -f ./$(DEPDIR)/t_wcrtomb.Po
@@ -7012,6 +7029,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/t_time.Po
 	-rm -f ./$(DEPDIR)/t_tls1.Po
 	-rm -f ./$(DEPDIR)/t_tmain-t_tmain.Po
+	-rm -f ./$(DEPDIR)/t_tmpfile.Po
 	-rm -f ./$(DEPDIR)/t_trycatch.Po
 	-rm -f ./$(DEPDIR)/t_vsscanf.Po
 	-rm -f ./$(DEPDIR)/t_wcrtomb.Po
